# markov_bot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  storage.md
docs/: architecture.md  operations.md  storage-format.md
markov-core/: Cargo.toml
markov-core/src/: chain.rs  error.rs  lib.rs  options.rs  sampling.rs  test_support.rs  token.rs
markov-storage/: Cargo.toml
markov-storage-cli/: Cargo.toml
markov-storage-cli/src/: legacy_v6.rs  main.rs
markov-storage-cli/tests/: cli.rs
markov-storage/src/: lib.rs  read.rs  tests.rs  types.rs  write.rs
markov-storage/src/tests/: compression.rs  format_validation.rs  helpers.rs  roundtrip.rs  semantic_validation.rs  snapshot_validation.rs  test_support.rs
src/: config.rs  discord_handler.rs  main.rs  markov.rs  storage.rs  test_support.rs  tokenizer.rs
src/markov/: sampling.rs
src/storage/: read.rs  tests.rs  types.rs  write.rs
src/storage/read/: header.rs  parse.rs  rebuild.rs
src/storage/read/parse/: compression.rs  records.rs  vocab.rs
src/storage/read/rebuild/: decode.rs  validate.rs
src/storage/tests/: compression.rs  format_validation.rs  helpers.rs  roundtrip.rs  semantic_validation.rs
src/storage/write/: compile.rs  encode.rs
src/storage/write/compile/: index.rs  model.rs  vocab.rs
src/storage/write/encode/: compression.rs  header.rs  sections.rs
