[package]
name = "markov_bot"
version = "0.1.0"
edition = "2024"
authors = ["jungamer-64"]
license = "MIT"

[dependencies]
dotenvy = "0.15.7"
lindera = { version = "3.0.5", features = ["embed-ipadic"] }
rand = "0.10"
rustls = "0.23.37"
tokio = { version = "1.48.0", features = ["full"] }
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-standby = "0.17.0"
unicode-segmentation = "1.12.0"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }
dead_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "warn"