[workspace]
members = [".", "markov-core", "markov-storage", "markov-storage-cli"]
resolver = "2"

[package]
name = "markov_bot"
version = "0.1.0"
edition = "2024"
authors = ["jungamer-64"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
markov-core = { path = "markov-core" }
markov-storage = { path = "markov-storage" }
lindera = { version = "3.0.5", features = ["embed-ipadic"] }
rand = "0.10"
rustls = "0.23.37"
tokio = { version = "1.48.0", features = ["full"] }
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-standby = "0.17.0"
unicode-segmentation = "1.12.0"

[dev-dependencies]
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }
dead_code = "deny"
missing_debug_implementations = "forbid"
unreachable_pub = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"
panic_in_result_fn = "forbid"
result_large_err = "forbid"
error_impl_error = "forbid"
map_err_ignore = "forbid"
manual_ok_or = "forbid"
unreachable = "forbid"
as_conversions = "forbid"
cast_possible_truncation ="forbid"
cast_possible_wrap ="forbid"
cast_precision_loss ="forbid"
cast_sign_loss ="forbid"
mut_mut = "forbid"
needless_pass_by_value = "forbid"
unnecessary_mut_passed = "forbid"
redundant_clone = "forbid"
