[package]
name = "markov-storage-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "markov-storage"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
lz4_flex = "0.13.0"
markov-storage = { path = "../markov-storage" }
serde_json = "1.0.145"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
